More Symbol Table tests